# thn-gastos

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  agent.py  agent2.py  api.py  app.py  app2.py  app_rendicion.py  cli_tools.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
